test/tests/operators/from_splunk/error_empty_variable_search.txt
error: `search` must not be empty
 --> tests/operators/from_splunk/error_empty_variable_search.tql:8:10
  |
8 |   search=$search,
  |          ^^^^^^^ 
  |
